--- a/projetomult/css/map.css
+++ b/projetomult/css/map.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("https://cdn.discordapp.com/attachments/232551474914131968/708712174637285486/map_attempt4.png");
+	background-image: url("../Resources/Archipelago.jpg");
 	background-position: center;
 	background-size: cover;
 }
